# pico_kernel

./: .gitignore  .gitmodules  CMakeLists.txt  Notes.md  README  README.md  TODO.md
cmake/: baremetal.cmake
config/: wifi_config.cmake
config/include/: lwipopts.h  wifi_config.h
include/: init.h  kernel.h  locks.h  memory.h  scheduler.h  sio_fifo.h  syscalls.h  terminal.h  thread.h  wifi.h
src/: context.S  init.c  isr.S  isr.c  main.c  mem_2.c  memory.c  mutex.c  scheduler.c  spinlock.c  syscalls.c  terminal.c  thread.c
